--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -14832,6 +14832,8 @@
   "ability tracker": "\u82f1\u96c4\u8ddf\u8e64\u5668",
   "auto buy blue trinket": "\u81ea\u52d5\u8cfc\u8cb7\u85cd\u8272\u5b88\u885b(\u6676\u7403)",
   "activation mode: ": "\u6fc0\u6d3b \u6a21\u5f0f",
+  "compact menu": "\u7dca\u6e4a\u7684\u83dc\u55ae",
+  "reset selected target upon release": "\u9078\u5b9a\u76ee\u6a19\u5f8c\u65bd\u653e",
   "amumu curse of sad mummy [danger]": "\u963f\u59c6\u59c6 R \u6280\u80fd \u6728\u4e43\u4f0a\u4e4b\u5492 [\u5371\u96aa]"
 }</value>
   </data>
